--- a/real-estate-html-template/property-type.html
+++ b/real-estate-html-template/property-type.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Makaan - Real Estate HTML Template</title>
+    <title>İbad - daşınmaz əmlak</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -36,7 +36,7 @@
         <!-- Spinner Start -->
         <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
             <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
-                <span class="sr-only">Loading...</span>
+                <span class="sr-only">yüklənir..</span>
             </div>
         </div>
         <!-- Spinner End -->
@@ -49,33 +49,33 @@
                     <div class="icon p-2 me-2">
                         <img class="img-fluid" src="img/icon-deal.png" alt="Icon" style="width: 30px; height: 30px;">
                     </div>
-                    <h1 class="m-0 text-primary">Makaan</h1>
+                    <h1 class="m-0 text-primary">İbad</h1>
                 </a>
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto">
-                        <a href="index.html" class="nav-item nav-link">Home</a>
-                        <a href="about.html" class="nav-item nav-link">About</a>
+                        <a href="index.html" class="nav-item nav-link">ev</a>
+                        <a href="about.html" class="nav-item nav-link">haqqında</a>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Property</a>
+                            <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">əmlak</a>
                             <div class="dropdown-menu rounded-0 m-0">
-                                <a href="property-list.html" class="dropdown-item">Property List</a>
-                                <a href="property-type.html" class="dropdown-item active">Property Type</a>
-                                <a href="property-agent.html" class="dropdown-item">Property Agent</a>
+                                <a href="property-list.html" class="dropdown-item">əmlak Listi</a>
+                                <a href="property-type.html" class="dropdown-item active">əmlak tipi</a>
+                                <a href="property-agent.html" class="dropdown-item">əmlak Agenti</a>
                             </div>
                         </div>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">səhifələr</a>
                             <div class="dropdown-menu rounded-0 m-0">
                                 <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                                <a href="404.html" class="dropdown-item">404 Error</a>
+            
                             </div>
                         </div>
-                        <a href="contact.html" class="nav-item nav-link">Contact</a>
+                        <a href="contact.html" class="nav-item nav-link">əlaqə</a>
                     </div>
-                    <a href="" class="btn btn-primary px-3 d-none d-lg-flex">Add Property</a>
+                    <a href="" class="btn btn-primary px-3 d-none d-lg-flex">əmlak əlavə et</a>
                 </div>
             </nav>
         </div>
@@ -86,12 +86,12 @@
         <div class="container-fluid header bg-white p-0">
             <div class="row g-0 align-items-center flex-column-reverse flex-md-row">
                 <div class="col-md-6 p-5 mt-lg-5">
-                    <h1 class="display-5 animated fadeIn mb-4">Property Type</h1> 
+                    <h1 class="display-5 animated fadeIn mb-4">əmlak növü</h1> 
                         <nav aria-label="breadcrumb animated fadeIn">
                         <ol class="breadcrumb text-uppercase">
-                            <li class="breadcrumb-item"><a href="#">Home</a></li>
-                            <li class="breadcrumb-item"><a href="#">Pages</a></li>
-                            <li class="breadcrumb-item text-body active" aria-current="page">Property Type</li>
+                            <li class="breadcrumb-item"><a href="#">ev</a></li>
+                            <li class="breadcrumb-item"><a href="#">səhifələr</a></li>
+                            <li class="breadcrumb-item text-body active" aria-current="page">əmlak növü</li>
                         </ol>
                     </nav>
                 </div>
@@ -114,24 +114,24 @@
                             </div>
                             <div class="col-md-4">
                                 <select class="form-select border-0 py-3">
-                                    <option selected>Property Type</option>
-                                    <option value="1">Property Type 1</option>
-                                    <option value="2">Property Type 2</option>
-                                    <option value="3">Property Type 3</option>
+                                    <option selected>əmlak növləri</option>
+                                    <option value="1">əmlak növü 1</option>
+                                    <option value="2">əmlak növü 2</option>
+                                    <option value="3">əmlak növü 3</option>
                                 </select>
                             </div>
                             <div class="col-md-4">
                                 <select class="form-select border-0 py-3">
-                                    <option selected>Location</option>
-                                    <option value="1">Location 1</option>
-                                    <option value="2">Location 2</option>
-                                    <option value="3">Location 3</option>
+                                    <option selected>məkanlar</option>
+                                    <option value="1">məkan 1</option>
+                                    <option value="2">məkan 2</option>
+                                    <option value="3">məkan 3</option>
                                 </select>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-2">
-                        <button class="btn btn-dark border-0 w-100 py-3">Search</button>
+                        <button class="btn btn-dark border-0 w-100 py-3">axtar</button>
                     </div>
                 </div>
             </div>
@@ -143,7 +143,7 @@
         <div class="container-xxl py-5">
             <div class="container">
                 <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                    <h1 class="mb-3">Property Types</h1>
+                    <h1 class="mb-3">əmlak növləri</h1>
                     <p>Eirmod sed ipsum dolor sit rebum labore magna erat. Tempor ut dolore lorem kasd vero ipsum sit eirmod sit. Ipsum diam justo sed rebum vero dolor duo.</p>
                 </div>
                 <div class="row g-4">
@@ -153,8 +153,8 @@
                                 <div class="icon mb-3">
                                     <img class="img-fluid" src="img/icon-apartment.png" alt="Icon">
                                 </div>
-                                <h6>Apartment</h6>
-                                <span>123 Properties</span>
+                                <h6>bina</h6>
+                                <span>123 əmlaklar</span>
                             </div>
                         </a>
                     </div>
@@ -165,7 +165,7 @@
                                     <img class="img-fluid" src="img/icon-villa.png" alt="Icon">
                                 </div>
                                 <h6>Villa</h6>
-                                <span>123 Properties</span>
+                                <span>165 əmlaklar</span>
                             </div>
                         </a>
                     </div>
@@ -175,8 +175,8 @@
                                 <div class="icon mb-3">
                                     <img class="img-fluid" src="img/icon-house.png" alt="Icon">
                                 </div>
-                                <h6>Home</h6>
-                                <span>123 Properties</span>
+                                <h6>ev</h6>
+                                <span>98 əmlaklar</span>
                             </div>
                         </a>
                     </div>
@@ -186,8 +186,8 @@
                                 <div class="icon mb-3">
                                     <img class="img-fluid" src="img/icon-housing.png" alt="Icon">
                                 </div>
-                                <h6>Office</h6>
-                                <span>123 Properties</span>
+                                <h6>Ofis</h6>
+                                <span>154 əmlaklar</span>
                             </div>
                         </a>
                     </div>
@@ -197,8 +197,8 @@
                                 <div class="icon mb-3">
                                     <img class="img-fluid" src="img/icon-building.png" alt="Icon">
                                 </div>
-                                <h6>Building</h6>
-                                <span>123 Properties</span>
+                                <h6>tikili</h6>
+                                <span>54 əmlaklar</span>
                             </div>
                         </a>
                     </div>
@@ -208,8 +208,8 @@
                                 <div class="icon mb-3">
                                     <img class="img-fluid" src="img/icon-neighborhood.png" alt="Icon">
                                 </div>
-                                <h6>Townhouse</h6>
-                                <span>123 Properties</span>
+                                <h6>şəhər evi</h6>
+                                <span>45 əmlaklar</span>
                             </div>
                         </a>
                     </div>
@@ -219,8 +219,8 @@
                                 <div class="icon mb-3">
                                     <img class="img-fluid" src="img/icon-condominium.png" alt="Icon">
                                 </div>
-                                <h6>Shop</h6>
-                                <span>123 Properties</span>
+                                <h6>mağaza</h6>
+                                <span> 34 əmlaklar</span>
                             </div>
                         </a>
                     </div>
@@ -230,8 +230,8 @@
                                 <div class="icon mb-3">
                                     <img class="img-fluid" src="img/icon-luxury.png" alt="Icon">
                                 </div>
-                                <h6>Garage</h6>
-                                <span>123 Properties</span>
+                                <h6>Garaj</h6>
+                                <span>183 əmlaklar</span>
                             </div>
                         </a>
                     </div>
@@ -246,10 +246,10 @@
             <div class="container py-5">
                 <div class="row g-5">
                     <div class="col-lg-3 col-md-6">
-                        <h5 class="text-white mb-4">Get In Touch</h5>
-                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                        <h5 class="text-white mb-4">toxunuş</h5>
+                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123küç.AZE</p>
+                        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 453 43 43</p>
+                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@nümunə.com</p>
                         <div class="d-flex pt-2">
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
@@ -258,15 +258,15 @@
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
-                        <h5 class="text-white mb-4">Quick Links</h5>
-                        <a class="btn btn-link text-white-50" href="">About Us</a>
-                        <a class="btn btn-link text-white-50" href="">Contact Us</a>
-                        <a class="btn btn-link text-white-50" href="">Our Services</a>
-                        <a class="btn btn-link text-white-50" href="">Privacy Policy</a>
-                        <a class="btn btn-link text-white-50" href="">Terms & Condition</a>
+                        <h5 class="text-white mb-4">tez keçidlər</h5>
+                        <a class="btn btn-link text-white-50" href="">haqqımızda</a>
+                        <a class="btn btn-link text-white-50" href="">bizimlə əlaqə</a>
+                        <a class="btn btn-link text-white-50" href="">bizim servislər</a>
+                        <a class="btn btn-link text-white-50" href="">gizlilik və siyasət</a>
+                        <a class="btn btn-link text-white-50" href="">qaydalar və qanunlar</a>
                     </div>
                     <div class="col-lg-3 col-md-6">
-                        <h5 class="text-white mb-4">Photo Gallery</h5>
+                        <h5 class="text-white mb-4">şəkil qaleriyası</h5>
                         <div class="row g-2 pt-2">
                             <div class="col-4">
                                 <img class="img-fluid rounded bg-light p-1" src="img/property-1.jpg" alt="">
@@ -289,11 +289,11 @@
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
-                        <h5 class="text-white mb-4">Newsletter</h5>
+                        <h5 class="text-white mb-4">xəbər bülliteni</h5>
                         <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
                         <div class="position-relative mx-auto" style="max-width: 400px;">
                             <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
-                            <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
+                            <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">qeydiyyatdan keç</button>
                         </div>
                     </div>
                 </div>
@@ -302,16 +302,16 @@
                 <div class="copyright">
                     <div class="row">
                         <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                            &copy; <a class="border-bottom" href="#">Your Site Name</a>, All Right Reserved. 
+                            &copy; <a class="border-bottom" href="#">İbad</a>, bütün hüquqlar qorunur. 
 							
 							<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-							Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
+							yaranıb <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
                         </div>
                         <div class="col-md-6 text-center text-md-end">
                             <div class="footer-menu">
-                                <a href="">Home</a>
-                                <a href="">Cookies</a>
-                                <a href="">Help</a>
+                                <a href="">ev</a>
+                                <a href="">köməkçilər</a>
+                                <a href="">yardım</a>
                                 <a href="">FQAs</a>
                             </div>
                         </div>
